--- a/SECURE-iT-Yourself/MainPage/MainPage.csproj
+++ b/SECURE-iT-Yourself/MainPage/MainPage.csproj
@@ -100,47 +100,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="Isabelle_DatabaseDataSet1.cs">
-      <DependentUpon>Isabelle_DatabaseDataSet1.xsd</DependentUpon>
+    <Compile Include="Beck_NC.xaml.cs">
+      <DependentUpon>Beck_NC.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Isabelle_DatabaseDataSet1.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Isabelle_DatabaseDataSet1.xsd</DependentUpon>
+    <Compile Include="Beck_Option.xaml.cs">
+      <DependentUpon>Beck_Option.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Isabelle_HomePage.xaml.cs">
-      <DependentUpon>Isabelle_HomePage.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Isabelle_Login.xaml.cs">
-      <DependentUpon>Isabelle_Login.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Isabelle_News.xaml.cs">
-      <DependentUpon>Isabelle_News.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Isabelle_SignUp.xaml.cs">
-      <DependentUpon>Isabelle_SignUp.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="Isabelle_Welcome.xaml.cs">
-      <DependentUpon>Isabelle_Welcome.xaml</DependentUpon>
-    </Compile>
-    <Page Include="Isabelle_HomePage.xaml">
+    <Page Include="Beck_NC.xaml">
+      <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
-    <Page Include="Isabelle_Login.xaml">
-      <SubType>Designer</SubType>
+    <Page Include="Beck_Option.xaml">
       <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Isabelle_News.xaml">
       <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Isabelle_SignUp.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="Isabelle_Welcome.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
@@ -165,20 +137,6 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="Isabelle_DatabaseDataSet1.xsc">
-      <DependentUpon>Isabelle_DatabaseDataSet1.xsd</DependentUpon>
-    </None>
-    <None Include="Isabelle_DatabaseDataSet1.xsd">
-      <Generator>MSDataSetGenerator</Generator>
-      <LastGenOutput>Isabelle_DatabaseDataSet1.Designer.cs</LastGenOutput>
-      <SubType>Designer</SubType>
-    </None>
-    <None Include="Isabelle_DatabaseDataSet1.xss">
-      <DependentUpon>Isabelle_DatabaseDataSet1.xsd</DependentUpon>
-    </None>
-    <None Include="packages.config">
-      <SubType>Designer</SubType>
-    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -216,7 +174,6 @@
     <Resource Include="Resources\img\success.png" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Resources\Beck_Images\Switch.png" />
     <Resource Include="Resources\Beck_Images\Background.jpg" />
   </ItemGroup>
   <ItemGroup>
@@ -227,13 +184,6 @@
     <Resource Include="Images\network.png" />
     <Resource Include="Images\newspaper.png" />
     <Resource Include="Images\updates-icon.png" />
-    <Content Include="LocalDB.mdf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-    </Content>
-    <Content Include="LocalDB_log.ldf">
-      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      <DependentUpon>LocalDB.mdf</DependentUpon>
-    </Content>
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.6.1">
@@ -260,6 +210,13 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Resources\Beck_Text\fw.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Beck_Images\Switch.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Beck_Text\MonitorDefault.txt" />
+    <Resource Include="Resources\Beck_Text\PortsMonitor.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
