--- a/SECURE-iT-Yourself/MainPage/App.config
+++ b/SECURE-iT-Yourself/MainPage/App.config
@@ -1,21 +1,21 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="MainPage.Properties.Settings.Isabelle_DatabaseConnectionString"
-            connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Isabelle_Database.mdf;Integrated Security=True"
-            providerName="System.Data.SqlClient" />
+        <add name="MainPage.Properties.Settings.Isabelle_DatabaseConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\Isabelle_Database.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    </connectionStrings>
+	  <connectionStrings>
+        <add name="MainPage.Properties.Settings.LocalDBConnectionString" connectionString="Data Source=(LocalDB)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\LocalDB.mdf;Integrated Security=True" providerName="System.Data.SqlClient"/>
     </connectionStrings>
     <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1" />
+        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.1"/>
     </startup>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
-        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0" />
+        <assemblyIdentity name="Newtonsoft.Json" publicKeyToken="30ad4fe6b2a6aeed" culture="neutral"/>
+        <bindingRedirect oldVersion="0.0.0.0-11.0.0.0" newVersion="11.0.0.0"/>
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
