--- a/SECURE-iT-Yourself/MainPage/packages.config
+++ b/SECURE-iT-Yourself/MainPage/packages.config
@@ -2,4 +2,6 @@
 <packages>
   <package id="FirewallManager" version="1.0.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net461" />
+  <package id="NUnit" version="3.10.1" targetFramework="net461" />
+  <package id="Pcap.Net.x64" version="1.0.4.1" targetFramework="net461" />
 </packages>
